# node-resizer

./: CMakeLists.txt  Dockerfile  README.md
images/: lgtm.b64
modules/resizer/: CMakeLists.txt
modules/resizer/src/: main.cpp  resizer.cpp  resizer.hpp
